--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
     top: 50%;
 }
 
-.clock:after {
+.clock::after {
     content: '';
     position: absolute;
     width: 100%;
@@ -59,7 +59,7 @@ body {
     padding: 20px;
 }
 
-.num:after {
+.num::after {
     content: '';
     position: absolute;
     top: 0;
@@ -69,16 +69,6 @@ body {
     height: 15px;
     background-color: black;
 }
-
-/* .num:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    transform: translate(-50%);
-    width: 6px;
-    height: 16px;
-    background-color: #111;
-} */
 
 .num1 {
     transform: rotate(30deg);
@@ -182,7 +172,6 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    /* background-color: #111; */
 }
 
 .hand div {
@@ -204,7 +193,7 @@ body {
     border-radius: 2px;
 }
 
-.hour  {
+.hour {
     width: 8px;
     height: 28%;
     border-radius: 4px;
